fix spacing

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
     width: 100%;
     text-align: center;
     position:absolute;
-    top:90%;
+    top:88%;
 }
 
 .projectImage{
@@ -134,6 +134,7 @@ body{
 
 .title{
     font-size: 50px;
+    bottom: 2%;
 }
 
 .fa-github{
